# ros1

./: CMakeLists.txt  Sampling.cpp
devel/: local_setup.sh  setup.sh
devel/lib/pkgconfig/: tests_alberto.pc
devel/lib/tests_alberto/: my_tests_node  sampling
devel/share/tests_alberto/cmake/: tests_albertoConfig.cmake
